--- a/index.html
+++ b/index.html
@@ -1,81 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Data</title>
-  <style>
-    body {
-  
-      font-family: Arial, sans-serif;
-      display:flex;
-      align-items: center;
-      flex-direction: column;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    th, td {
-        width: inherit;
-        width: inherit;
-      padding: 8px;
-      text-align: left;
-      border-bottom: 1px solid #ddd;
-    }
-    th {
-      background-color: #f2f2f2;
-    }
-  </style>
-</head>
-<body>
-  <h1>User Data</h1>
-  <div id="userData"></div>
-  <script>
-    // Fetch data from the API and display it
-    async function fetchData() {
-      try {
-        const response = await fetch('http://localhost:3000/users');
-        const data = await response.json();
-        console.log(data);
-        const userData = data.users;
-        const table = document.createElement('table');
-        const headers = ['Name', 'Age', 'Active', 'Last Login'];
-        
-        // Create table headers
-        const headerRow = table.insertRow();
-        headers.forEach(headerText => {
-          const th = document.createElement('th');
-          th.textContent = headerText;
-          headerRow.appendChild(th);
-        });
-
-        // Populate table with user data
-        userData.forEach(user => {
-          const row = table.insertRow();
-          row.insertCell().textContent = user.name;
-          row.insertCell().textContent = user.age;
-          row.insertCell().textContent = user.active ? 'Yes' : 'No';
-          row.insertCell().textContent = new Date(user.last_login).toLocaleString();
-        });
-
-        document.getElementById('userData').appendChild(table);
-      } catch (error) {
-        console.error('Error fetching data:', error);
-        document.getElementById('userData').textContent = 'Error fetching data';
-      }
-    }
-
-    // Call fetchData function when the page loads
-    document.addEventListener('DOMContentLoaded', fetchData);
-  </script>
-</body>
-</html> -->
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -126,7 +48,7 @@
         // Fetch data from the API and display it
         async function fetchData(searchQuery = '') {
             try {
-                let url = 'http://localhost:3000/users'
+                let url = 'https://node-js-api-3.onrender.com/users'
                 if (searchQuery) {
                     url += `?name=${encodeURIComponent(searchQuery)}`.trim();
                     console.log(url)
