--- a/index.html
+++ b/index.html
@@ -47,14 +47,22 @@
     <script>
         // Fetch data from the API and display it
         async function fetchData(searchQuery = '') {
+            const userDataContainer = document.getElementById('userData');
             try {
-                let url = 'https://node-js-api-3.onrender.com/users'
+                let url = 'http://localhost:3000/users'
                 if (searchQuery) {
                     url += `?name=${encodeURIComponent(searchQuery)}`.trim();
                     console.log(url)
                 }
                 const response = await fetch(url);
-                const data = await response.json();
+                console.log(response)
+                let data 
+                if(!response.ok){
+                    throw new Error(' maybe your query has wrong.');
+                }else{
+                    data = await response.json();
+                }
+                console.log(data);
                 const userData = data.users;
                 const table = document.createElement('table');
                 const headers = ['Name', 'Age', 'Active', 'Last Login'];
@@ -76,7 +84,7 @@
                     row.insertCell().textContent = new Date(user.last_login).toLocaleString();
                 });
 
-                const userDataContainer = document.getElementById('userData');
+               
                 // Clear previous data
                 while (userDataContainer.firstChild) {
                     userDataContainer.removeChild(userDataContainer.firstChild);
@@ -84,7 +92,7 @@
                 userDataContainer.appendChild(table);
             } catch (error) {
                 console.error('Error fetching data:', error);
-                document.getElementById('userData').textContent = 'Error fetching data';
+                document.getElementById('userData').textContent = error.message
             }
         }
 
